Closes #3022: Fix few oversights in the contrast version (#3023)

--- a/fairchive-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/fairchive-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -628,7 +628,16 @@ a[id$=advsearchlink] {
 	.leaflet-top, .leaflet-bottom {
 		z-index: 929;
 	}
+}
 
+/* Fix invisible map buttons in high contrast mode */
+body[class*="high-contrast"] {
+	div[id^="map_geospatial"] a,
+	div[id^="geospatial_geographicBoundingBox"] a,
+	#searchResultMap a {
+		color: #000 !important;
+		text-decoration: none !important;
+	}
 }
 
 /* Forms */
@@ -4408,6 +4417,8 @@ body.font-size-percent-200 {
 	.highlight,
 	.ui-message-error,
 	.ui-messages-error,
+	.ui-message-info,
+	.ui-messages-info,
 	pre,
 	.ui-widget-content code {
 		background-color: $contrast-background-color;
@@ -4656,7 +4667,7 @@ body.font-size-percent-200 {
 		}
 	}
 
-	input[type="text"], input[type="password"], textarea, .ui-inputfield, .ui-widget-content .ui-inputfield, .ui-widget-header .ui-inputfield {
+	input[type="text"], input[type="password"], textarea, .ui-inputfield, .ui-widget-content .ui-inputfield, .ui-widget-header .ui-inputfield, .autocomplete-form-control.ui-autocomplete input.ui-autocomplete-input {
 		&, &.form-control {
 			border-color: $contrast-link-color;
 			background: $contrast-background-color;
@@ -4875,9 +4886,6 @@ body.font-size-percent-200 {
 
 	.ui-widget-content .ui-selectonemenu.ui-state-default {
 		background: $contrast-link-color;
-	}
-	.ui-selectonemenu .ui-selectonemenu-trigger.ui-state-default {
-		padding-bottom: 34px;
 	}
 
 	.ui-widget-content .ui-picklist .ui-state-disabled {
